vcluster_versioned_docs/version-0.26.0/_partials/config/integrations.mdx

<details className="config-field" data-expandable="true">
<summary>

## `integrations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations}

Integrations holds config for vCluster integrations with other operators or tools running on the host cluster

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `metricsServer` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-metricsServer}

MetricsServer reuses the metrics server from the host cluster within the vCluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-metricsServer-enabled}

Enabled signals the metrics server integration should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `apiService` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-metricsServer-apiService}

APIService holds information about where to find the metrics-server service. Defaults to metrics-server/kube-system.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-metricsServer-apiService-service}

Service is a reference to the service for the API server.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-metricsServer-apiService-service-name}

Name is the name of the host service of the apiservice.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-metricsServer-apiService-service-namespace}

Namespace is the name of the host service of the apiservice.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-metricsServer-apiService-service-port}

Port is the target port on the host service to connect to.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-metricsServer-nodes}

Nodes defines if metrics-server nodes api should get proxied from host to virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `pods` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-metricsServer-pods}

Pods defines if metrics-server pods api should get proxied from host to virtual cluster.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `kubeVirt` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt}

KubeVirt reuses a host kubevirt and makes certain CRDs from it available inside the vCluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-enabled}

Enabled signals if the integration should be enabled

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `apiService` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-apiService}

APIService holds information about where to find the virt-api service. Defaults to virt-api/kubevirt.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `service` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-apiService-service}

Service is a reference to the service for the API server.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-apiService-service-name}

Name is the name of the host service of the apiservice.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-apiService-service-namespace}

Namespace is the name of the host service of the apiservice.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-apiService-service-port}

Port is the target port on the host service to connect to.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `webhook` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-webhook}

Webhook holds configuration for enabling the webhook within the vCluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-webhook-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `sync` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync}

Sync holds configuration on what resources to sync

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `dataVolumes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-dataVolumes}

If DataVolumes should get synced

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-dataVolumes-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualMachineInstanceMigrations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachineInstanceMigrations}

If VirtualMachineInstanceMigrations should get synced

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachineInstanceMigrations-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualMachineInstances` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachineInstances}

If VirtualMachineInstances should get synced

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachineInstances-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualMachines` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachines}

If VirtualMachines should get synced

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachines-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualMachineClones` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachineClones}

If VirtualMachineClones should get synced

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachineClones-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualMachinePools` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachinePools}

If VirtualMachinePools should get synced

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-kubeVirt-sync-virtualMachinePools-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `externalSecrets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets}

ExternalSecrets reuses a host external secret operator and makes certain CRDs from it available inside the vCluster.
- ExternalSecrets will be synced from the virtual cluster to the host cluster.
- SecretStores will be synced from the virtual cluster to the host cluster and then bi-directionally.
- ClusterSecretStores will be synced from the host cluster to the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-externalSecrets-enabled}

Enabled defines whether the external secret integration is enabled or not

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `version` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-version}

Version defines the version of the external secrets operator to use. If empty, the storage version will be used.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `webhook` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-webhook}

Webhook defines whether the host webhooks are reused or not

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-externalSecrets-webhook-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `sync` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync}

Sync defines the syncing behavior for the integration

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `toHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost}

ToHost defines what resources are synced from the virtual cluster to the host

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `externalSecrets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets}

ExternalSecrets allows to configure if only a subset of ExternalSecrets matching a label selector should get synced from the virtual cluster to the host cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `selector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets-selector}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets-selector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets-selector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets-selector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets-selector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-externalSecrets-selector-matchExpressions-values}



</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `stores` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores}

Stores defines if secret stores should get synced from the virtual cluster to the host cluster and then bi-directionally.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `selector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-selector}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-selector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-selector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-selector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-selector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-selector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-toHost-stores-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `fromHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost}

FromHost defines what resources are synced from the host cluster to the virtual cluster

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `clusterStores` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores}

ClusterStores defines if cluster secrets stores should get synced from the host cluster to the virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `selector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-selector}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-selector-matchLabels}



</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-selector-matchExpressions}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-selector-matchExpressions-key}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-selector-matchExpressions-operator}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-selector-matchExpressions-values}



</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-externalSecrets-sync-fromHost-clusterStores-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `certManager` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager}

CertManager reuses a host cert-manager and makes its CRDs from it available inside the vCluster.
- Certificates and Issuers will be synced from the virtual cluster to the host cluster.
- ClusterIssuers will be synced from the host cluster to the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-certManager-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `sync` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync}

Sync contains advanced configuration for syncing cert-manager resources.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `toHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync-toHost}



</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `certificates` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync-toHost-certificates}

Certificates defines if certificates should get synced from the virtual cluster to the host cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-certManager-sync-toHost-certificates-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `issuers` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync-toHost-issuers}

Issuers defines if issuers should get synced from the virtual cluster to the host cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-certManager-sync-toHost-issuers-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `fromHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync-fromHost}



</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `clusterIssuers` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync-fromHost-clusterIssuers}

ClusterIssuers defines if (and which) cluster issuers should get synced from the host cluster to the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-certManager-sync-fromHost-clusterIssuers-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `selector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-certManager-sync-fromHost-clusterIssuers-selector}

Selector defines what cluster issuers should be imported.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#integrations-certManager-sync-fromHost-clusterIssuers-selector-labels}

Labels defines what labels should be looked for

</summary>



</details>


</details>


</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `istio` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-istio}

Istio syncs DestinationRules, Gateways and VirtualServices from virtual cluster to the host.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#integrations-istio-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `sync` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-istio-sync}



</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `toHost` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost}



</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `destinationRules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost-destinationRules}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost-destinationRules-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `gateways` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost-gateways}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost-gateways-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualServices` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost-virtualServices}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#integrations-istio-sync-toHost-virtualServices-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `netris` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#integrations-netris}

Netris integration helps configuring netris networking for vCluster.

</summary>



</details>


</details>
